--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -54,3 +54,8 @@ section.user_info {
     max-width: 50px;
     border-radius: 50%;
 }
+
+/* Status */
+.status-delete-btn {
+    width: max-content;
+}
